# vst_template

./: CMakeLists.txt
src/: plugin_cids.h  plugin_controller.cpp  plugin_controller.h  plugin_entry.cpp  plugin_processor.cpp  plugin_processor.h  version.h
